# hello-neon

./: local.properties
app/: build.gradle
app/libs/include/: config.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Neon.S  Test.S  helloneon.cpp  rgb2gray.cpp  rgb2yuv.cpp
app/src/main/java/com/example/helloneon/: HelloNeon.java
app/src/main/res/layout/: activity_hello_neon.xml
gradle/wrapper/: gradle-wrapper.properties
